--- a/example/Anchor.toml
+++ b/example/Anchor.toml
@@ -1,29 +1,41 @@
+[toolchain]
+
 [features]
-seeds = false
+resolution = true
+skip-lint = false
 
 [programs.devnet]
-amm_proxy = "DZWNFCeULDmofBEEknDbeq4w2J3oxXyvFKW6kG1L5Kt5"
+amm_proxy = "Bkkxytj8bLfLHuMJhBXty5hxamT7cg6QwN94zFC9pJMD"
 
 [registry]
 url = "https://github.com/raydium-io/raydium-contract-instructions"
 
 [provider]
-cluster = "localnet"
+cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
 
+[test]
+startup_wait = 5000
+shutdown_wait = 2000
+upgradeable = false
 
 [test.validator]
+bind_address = "0.0.0.0"
 url = "https://api.devnet.solana.com"
-
+ledger = ".anchor/test-ledger"
+rpc_port = 8899
 
 [[test.validator.clone]]
 address = "EoTcMgcDRTJVZDMZWBoU6rhYHZfkNTVEAfz3uUJRcYGj"
+
 [[test.validator.clone]]
 address = "HWy1jotHpo6UqeQxx49dpYYdQB8wj9Qk9MdxwjLvDHB8"
+
 [[test.validator.clone]]
 address = "3XMrhbv989VxAMi3DErLV9eJht1pHppW5LbKxe9fkEFR"
+
 [[test.validator.clone]]
 address = "8QN9yfKqWDoKjvZmqFsgCzAqwZBQuzVVnC388dN5RCPo"
